# ritam

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  regression-gate.yml
assets/ducks/: duck_technology.md  duck_wars_extended_history.md  galactic_gazetteer.md  isoprene_planetary_survey.md  quack_federation_governance.md  species_compendium.md  the_duck_wars.md
docs/: ingestion_v2.md  rag_v1_architecture.md
evals/: README.md  dataset.jsonl  results.csv  results.json  run_eval.py
evals/results/: 2026-05-22_qdrant-gemini-embedding-001.md  2026-05-31_threshold-0.70.md  2026-05-31_threshold-0.80.md  2026-05-31_threshold-0.85.md
evals/results/matrix_2026-06-27/: README.md  matrix_summary.csv
evals/results/matrix_2026-06-27/emb-001_cs-10000_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-10000_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-10000_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-10000_th-0.85/: config.json
evals/results/matrix_2026-06-27/emb-001_cs-2500_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-2500_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-2500_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-2500_th-0.85/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-5000_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-5000_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-5000_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-001_cs-5000_th-0.85/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.55/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.60/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.65/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-10000_th-0.85/: config.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.55/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.60/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.65/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-2500_th-0.85/: config.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.55/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.60/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.65/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.70/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.75/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.80/: config.json  results.csv  results.json
evals/results/matrix_2026-06-27/emb-2_cs-5000_th-0.85/: config.json  results.csv  results.json
infra/: .terraform.lock.hcl  apis.tf  artifact_registry.tf  cloudrun.tf  iam.tf  locals.tf  main.tf  outputs.tf  providers.tf  secret_manager.tf  variables.tf  versions.tf
src/llm_lab/: naive_rag.py
src/llm_lab/api/: main.py  middleware.py
src/llm_lab/api/routers/: query.py
src/llm_lab/config/: paths.py  settings.py
src/llm_lab/core/: factories.py  ingestion_service.py  rag_service.py
src/llm_lab/document_source/: local_document_source.py  types.py
src/llm_lab/llm/: errors.py  gemini_client.py  types.py
src/llm_lab/observability/: logging.py  setup.py
src/llm_lab/retrieval/: indexing.py  retriever.py  types.py
src/llm_lab/vector_store/: qdrant.py  types.py
src/llm_lab/vector_store/file/: file_store.py
src/ritam/: __init__.py  chat.py  main.py  naive_rag.py
src/ritam/api/: dependencies.py  exceptions.py  main.py  middleware.py
src/ritam/api/routers/: echo.py  query.py
src/ritam/config/: settings.py  variables.py
src/ritam/core/: factories.py  ingestion_service.py  rag_service.py
src/ritam/cost/: models.py  types.py
src/ritam/document_source/: local_document_source.py
src/ritam/llm/: gemini_client.py  types.py
src/ritam/observability/: context.py  logging.py  setup.py
src/ritam/retrieval/: indexing.py  retriever.py
src/ritam/vector_store/: errors.py  qdrant.py
src/ritam/vector_store/file/: file_store.py  types.py
tests/: conftest.py  fakes.py  test_file_store_cosine_similarity.py
tests/api/: test_dependencies.py  test_query_api.py
tests/config/: test_settings.py
tests/core/: test_factories.py  test_ingestion_service.py  test_rag_service.py
tests/cost/: test_models.py
tests/retrieval/: test_indexing.py  test_retriever.py
tests/vector_store/: test_file_store.py  test_qdrant.py
